@@ -39,7 +39,7 @@ public class WebTest {
 
         private static void goGet(String host, int port, String contextPath, boolean noTimeout) {
                 try {
-                        URL url = new URL("http://" + host + ":" + port + contextPath);
+                        URL url = URI.create("http://" + host + ":" + port + contextPath).toURL();
                         url.getContent();
                         stat.addStatus("web-thread-timeout" + (noTimeout ? "-debug" : ""), noTimeout ? SimpleReporterAdapter.PASS : SimpleReporterAdapter.FAIL);
                 } catch( IOException ex){
